# hand_written_digits

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  mnist_model.h5  pyproject.toml  requirements.txt  train_model.py
static/: app.js  style.css
templates/: index.html
